@@ -12,6 +12,14 @@ S3method(plot,momentuHMMData)
 S3method(print,miHMM)
 S3method(print,miSum)
 S3method(print,momentuHMM)
+S3method(setModelName,HMMfits)
+S3method(setModelName,miHMM)
+S3method(setModelName,miSum)
+S3method(setModelName,momentuHMM)
+S3method(setStateNames,HMMfits)
+S3method(setStateNames,miHMM)
+S3method(setStateNames,miSum)
+S3method(setStateNames,momentuHMM)
 S3method(timeInStates,HMMfits)
 S3method(timeInStates,miHMM)
 S3method(timeInStates,momentuHMM)
@@ -34,6 +42,8 @@ export(plotSpatialCov)
 export(plotStates)
 export(prepData)
 export(pseudoRes)
+export(setModelName)
+export(setStateNames)
 export(simData)
 export(simObsData)
 export(stateProbs)
